--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,7 +1,7 @@
-name: First-Action
+name: First Action
 on: workflow_dispatch
 jobs:
-First-job:
+first-job:
 runs-on: ubuntu-latest
 steps:
 - name: First-Step
